--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,52 @@
     margin: 0;
     background-color: yellow !important;
 }
+
+.slick-dots{
+    background-color: yellow;
+}
+.bg-yellow{
+    background-color: yellow !important;
+}
 .text-yellow{
     color: yellow !important;
 }
+
+button{
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    border-radius: none;
+    outline: none;
+    z-index: 100;
+  }
+  .slide-arrow{
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+  }
+  .prev-arrow{
+    left: -40px;
+    width: 0;
+    height: 0;
+    border-left: 0 solid transparent;
+    border-right: 15px solid #113463;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    z-index: 1000;
+  }
+  .next-arrow{
+    right: -40px;
+    width: 0;
+    height: 0;
+    border-right: 0 solid transparent;
+    border-left: 15px solid #113463;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    z-index: 1000;
+  }
+
 
 .scroll-to-top{
     background-color: red;
